--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
                     <parallel>methods</parallel>
                     <threadCount>4</threadCount>
                     <testFailureIgnore>true</testFailureIgnore>
+                    <perCoreThreadCount>false</perCoreThreadCount>
                     <includes>
                         <include>**/CukesRunner*.java</include>
                     </includes>
